# KanbanRest

./: .gitignore  CHANGELOG.md  KanbanRest.cabal  LICENSE  README.md  docker-compose.yaml
app/: Main.hs
init-scripts/: init.sql
src/: Configuration.hs  Controller.hs  Persistence.hs  Security.hs  Validation.hs
src/Service/: ChangeStatus.hs  CreateBoard.hs  CreateTask.hs  GetTasks.hs  HelloWorld.hs  LoginUser.hs  RegisterUser.hs  UpdateTask.hs
