cabal-version:      3.0
name:               KanbanRest
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             IvanDimovSIT
maintainer:         ivan390@abv.bg
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall


library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  
        Controller
        Persistence
    other-modules:
        Service.HelloWorld
        Service.RegisterUser
        Service.LoginUser
        Security
    build-depends:    
        base ^>=4.18.3.0,
        scotty >= 0.22,
        text >= 1.2.4.1,
        aeson >= 2.2.3.0,
        postgresql-simple >=0.6,
        password >= 3.0.2.0,
        uuid >= 1.3,
        http-types >= 0.12.4,
        wai >= 3.2.4,
        jwt >= 0.11.0,
        time >= 1.14,
        bytestring >= 0.11.5,
        containers >= 0.6.7
    default-language: Haskell2010
    ghc-options: -O2 -Wall -j

executable KanbanRest
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    
        base ^>=4.18.3.0,
        postgresql-simple >=0.6,
        KanbanRest
    hs-source-dirs:   app
    default-language: Haskell2010
    
